Fixed page size issue (unnecessary horizontal scroll bar)

--- a/PollBuddy-Server/frontend/src/pages/homepage/homepage.scss
+++ b/PollBuddy-Server/frontend/src/pages/homepage/homepage.scss
@@ -1,7 +1,5 @@
 .page-homepage{
   background-color: #4D3656;
-  height: 100vh;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
